-
Bug
-
Resolution: Done
-
P2: Important
-
None
-
5.3.2, 5.4.2, 5.5.1, 5.6.2, 5.7.0, 5.8.0 Beta
-
None
QQuickWidget::grabFrameBuffer() does not follow grabbing behavior of QQuickWindow.
In fact QQuickWindow grabbing polish and sync the scene graph while QQuickWidget does not.
This lead to QQuickWidget::grabFrameBuffer() to render a new frame being the exact same one as previously (ie, no pending changes are applied).
For Gerrit Dashboard: QTBUG-57596 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
179790,5 | Fix wrong grabbing behavior | 5.8 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
180497,1 | Fix wrong grabbing behavior | 5.7 | qt/qtdeclarative | Status: ABANDONED | -2 | 0 |
180498,3 | Fix wrong grabbing behavior | 5.6 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
180501,1 | Fix wrong grabbing behavior | 5.5 | qt/qtdeclarative | Status: ABANDONED | -2 | 0 |
180503,1 | Fix wrong grabbing behavior | 5.4 | qt/qtdeclarative | Status: ABANDONED | -2 | 0 |
180505,1 | Fix wrong grabbing behavior | 5.3 | qt/qtdeclarative | Status: ABANDONED | -2 | 0 |